visual changes to html
i changes some text.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
         <a href="vidoe2.0.html">home</a>
-   <h3>am the one</h3>
+   <h3>am the <strong>one</strong></h3>
+
     <p>idk what to say
-        <ul>yes</ul>
+        <ul><em>yes</em></ul>
     </p>
     <img src ="images/cat.jpg" width="400" 
     height="400" />
